Dont insert line breaks in tooltip

BUG: 492062
(cherry picked from commit 9683da08798b327b8d41d80123a6773e9246821c)